<resources>
    <string name="app_name">QQ</string>
    <string name="title_activity_index">MainActivity</string>
    <string name="message">消息</string>
    <string name="friends">通讯录</string>
    <string name="news">朋友圈</string>
    <string name="mine">我的</string>
    <string name="deleteFriend">删除好友</string>
    <string name="delete">删除</string>
    <string name="addFriend">添加朋友</string>
    <string name="help">查看状态</string>
    <string name="delete_account">注销账户</string>
    <string name="picture">更换头像</string>
    <string name="music">Listen Music</string>
    <string name="Online_shopping">趣聊畅购</string>
    <string name="Piano_Tiles">趣聊畅玩</string>
    <string name="weather_station">气象小站</string>


    <string-array name="cities">
        <item>澳门</item>
        <item>北京</item>
        <item>长沙</item>
        <item>长春</item>
        <item>成都</item>
        <item>重庆</item>
        <item>大庆</item>
        <item>福州</item>
        <item>广州</item>
        <item>贵阳</item>
        <item>哈尔滨</item>
        <item>海口</item>
        <item>杭州</item>
        <item>合肥</item>
        <item>呼和浩特</item>
        <item>济南</item>
        <item>昆明</item>
        <item>拉萨</item>
        <item>兰州</item>
        <item>南京</item>
        <item>南昌</item>
        <item>上海</item>
        <item>沈阳</item>
        <item>石家庄</item>
        <item>台北</item>
        <item>太原</item>
        <item>天津</item>
        <item>乌鲁木齐</item>
        <item>武汉</item>
        <item>西安</item>
        <item>西宁</item>
        <item>银川</item>
        <item>郑州</item>
        <item>香港</item>
    </string-array>
</resources>