<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="wrap_content">

    <item android:id="@+id/menu_addFriend"
        android:icon="@drawable/addfriend"
        app:showAsAction="withText"
        android:title="@string/addFriend">
    </item>
    <item android:id="@+id/menu_help"
        android:icon="@drawable/help"
        app:showAsAction="withText"
        android:title="@string/help">
    </item>
    <!-- 添加的注销账号菜单项 -->
    <item android:id="@+id/menu_delete_account"
        android:icon="@drawable/delete_account_icon"
        app:showAsAction="withText"
        android:title="@string/delete_account">
    </item>
    <!-- 添加的music菜单项 -->
    <item
        android:id="@+id/menu_music_player"
        android:icon="@drawable/music"
        app:showAsAction="withText"
        android:title="@string/music"/>

    <item android:id="@+id/menu_Online_shopping"
        android:icon="@drawable/addbtn"
        app:showAsAction="withText"
        android:title="@string/Online_shopping">
    </item>

    <item android:id="@+id/menu_Piano_Tiles"
        android:icon="@drawable/addbtn"
        app:showAsAction="withText"
        android:title="@string/Piano_Tiles">
    </item>

    <!-- 添加气象小站菜单项 -->
    <item android:id="@+id/menu_weather_station"
        android:icon="@drawable/weathertubiao"
    app:showAsAction="withText"
    android:title="@string/weather_station">
</item>

    </menu>